Basic HTML files

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <ul class="nav-list v-class-resp">
             <div class="Logo"> <img src="img/MAIN_LOGO.png" alt="error"></div>
             <li><a href="#Home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Service</a></li>
+            <li><a href="#About-us-section">About</a></li>
+            <li><a href="#services-container">Service</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="rightnav v-class-resp">
@@ -34,15 +34,15 @@
         </div>
     </nav>
 
-    <section class="background firstsection" id="Home">
+    <section class="background2 firstsection" id="Home">
         <div class="box-main">
             <div class="firsthalf">
                 <p class="text-big">NatLearn</p>
                 <p class="increase">Language translator & AI study buddy</p>
                 <p class="text-small">Transform education with our language translation tool and intelligent chatbot support.</p>
                 <div class="buttons">
-                    <button class="btn">Login</button>
-                    <button class="btn">Sign up</button>
+                    <button class="btn"><a href="login.html">Login</a></button>
+                    <button class="btn"><a href="signup.html">Sign up</a></button>
                 </div>
             </div>
 
@@ -102,7 +102,7 @@
     
     <hr style="margin-top:50px;">
     <section class="contact" id="contact">
-        <h2 class="text-center">Contact us</h2>
+        <h2 class="text-center h-primary center">Contact us</h2>
         <div class="form">
             <input class="form-input" type="text" name="name" id="name" placeholder="Enter Your Name">
             <input class="form-input" type="text" name="phone" id="phone" placeholder="Phone number">
